[package]
name = "rustlerexperiment"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "rustlerexperiment"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.26.0"
bgpkit-parser = "0.8.1"
log="0.4"
env_logger="0.9"
itertools = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
serde_rustler = { git = "https://github.com/benhaney/serde_rustler", tag = "v0.0.5" }
serde-transcode = "1.1"
rand = "0.8.5"